# engine-jni

./: .editorconfig  .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: game-engine.cpp
app/src/main/cpp/includes/: MainEngine.cpp  MainEngine.h
app/src/main/cpp/includes/controls/: GameObject.cpp  GameObject.h  HorizontalLayout.cpp  HorizontalLayout.h  ObjectContainer.cpp  ObjectContainer.h  Rect.cpp  Rect.h  Transform.cpp  Transform.h  Vector2d.cpp  Vector2d.h  VerticalLayout.cpp  VerticalLayout.h
app/src/main/cpp/includes/managers/: AudioManager.cpp  AudioManager.h  FileLoader.h  Manager.h
app/src/main/cpp/includes/scenes/: MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h
app/src/main/java/com/smartpoint/android/gameengine/: GameEngine.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
